Footer Issue
Removed footer, causing too much trouble

--- a/assets/styles/themes.scss
+++ b/assets/styles/themes.scss
@@ -75,15 +75,18 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
+  height: 150px;
   font-size: 25px;
   justify-content: center;
   flex-direction: column;
   margin-top: 20px;
   #message{
     margin: 10px 10px;
+    // position: absolute;
   }
   #message-box {
     margin: 10px 10px;
+    // position: absolute;
   }
 }
 
@@ -100,31 +103,33 @@ body {
     display: none;
   }
 }
-
-footer {
-text-transform: uppercase;
-padding: 0 20px;
-background-color: $footer;
-color: $white;
-font-size: 14px;
-letter-spacing: .08em;
-font-weight: 500;
-bottom: 0;
-position: absolute;
-width: 100%;
-text-align: center;
-}
-
-.clearfix:after {
-visibility: hidden;
-display: block;
-content: ' ';
-clear: both;
-height: 0;
-font-size: 0;
-}
-
-.name{
-	color: $name;
-	font-weight: 700;
-}
+//
+// footer {
+// text-transform: uppercase;
+// padding: 0 20px;
+// background-color: $footer;
+// color: $white;
+// font-size: 14px;
+// letter-spacing: .08em;
+// font-weight: 500;
+// bottom: 0;
+// position: absolute;
+// width: 100%;
+// text-align: center;
+// display: flex;
+// flex-shrink: 0;
+// }
+//
+// .clearfix:after {
+// visibility: hidden;
+// display: block;
+// content: ' ';
+// clear: both;
+// height: 0;
+// font-size: 0;
+// }
+//
+// .name{
+// 	color: $name;
+// 	font-weight: 700;
+// }
